# fei-einops

./: LICENSE  README.md  fei-einops.cabal  stack.yaml
src/Fei/: Einops.hs
src/Fei/Einops/: Expression.hs  MXNet.hs  Operation.hs
