cabal-version:       2.4
name:                fei-einops
version:             0.0.1
synopsis:            Tensor operations
description:         This library mimics the feature of python library einops.
homepage:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jiasen Wu
maintainer:          jiasenwu@hotmail.com
copyright:           2021 - Jiasen Wu
category:            Machine Learning, AI
build-type:          Simple
extra-source-files:  README.md

Flag mxnet {
  Description: MXNet backend
  Default: False
}

library
  build-depends:       base >= 4.7 && < 5,
                       lens < 5,
                       rio < 0.2,
                       attoparsec < 0.14,
                       containers < 0.7
  if flag(mxnet) {
      build-depends:   fei-base
  }
  hs-source-dirs:      src
  exposed-modules:     
  other-modules:       Fei.Einops.Expression
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts,
                       GADTs,
                       StandaloneDeriving,
                       DeriveGeneric,
                       GeneralizedNewtypeDeriving,
                       ExplicitForAll,
                       DataKinds,
                       TypeFamilies,
                       OverloadedLabels,
                       OverloadedStrings,
                       LambdaCase,
                       MultiWayIf,
                       DoAndIfThenElse,
                       NoImplicitPrelude,
                       TupleSections,
                       ScopedTypeVariables

source-repository head
  type:     git
  location: https://github.com/pierric/fei-einops
